--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "cytaty",
-	"version": "1.1.21",
+	"name": "helloemilia",
+	"version": "1.2.0",
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js"
@@ -9,3 +9,4 @@
 		"express": "^4.17.3"
 	}
 }
+
