--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
 	"name": "helloemilia",
-	"version": "1.2.1",
+	"version": "1.2.2",
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js"
 	},
 	"dependencies": {
-		"express": "^4.17.3"
+		"body-parser": "^1.20.0",
+		"cors": "^2.8.5",
+		"express": "^4.17.3",
+		"web-push": "^3.4.5"
 	}
 }
-
