--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
 	"dependencies": {
 		"body-parser": "^1.20.0",
 		"cors": "^2.8.5",
-		"express": "^4.17.3",
-		"web-push": "^3.4.5"
+		"express": "^4.17.3"
 	}
 }
-
