--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Hello Emilia",
 	"icons": [
 		{
-			"src": "/images/icons-512.png",
+			"src": "/icons-512.png",
 			"type": "image/png",
 			"sizes": "512x512"
 		}
